--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -75,6 +75,11 @@ Style/TrailingCommaInLiteral:
 Style/SymbolArray:
   Description: Using percent style obscures symbolic intent of array's contents.
   EnforcedStyle: brackets
+Style/PredicateName:
+  NameWhitelist:
+  - is_to_s
+Style/FileName:
+  Enabled: false
 RSpec/MessageSpies:
   EnforcedStyle: receive
 Style/Documentation:
