--- a/.sync.yml
+++ b/.sync.yml
@@ -23,3 +23,9 @@ Rakefile:
         - is_to_s
     Style/FileName:
       Enabled: false
+spec/spec_helper.rb:
+  coverage_report: true
+  mock_with: ':rspec'
+  minimum_code_coverage_percentage: 0
+  strict_level: ":warning"
+  hiera_config: "hiera.yaml"
