--- a/hiera.yaml
+++ b/hiera.yaml
@@ -6,9 +6,19 @@ defaults:  # Used for any hierarchy level that omits these keys.
   data_hash: yaml_data  # Use the built-in YAML backend.
 
 hierarchy:
-  - name: "major release"
+  - name: "osfamily/major release"
     paths:
-      - "%{macosx_productversion_major}.yaml"
-      - "%{facts.os.release.major}.yaml"
+      - "os/%{facts.os.family}/%{facts.os.release.major}.yaml"
+        # Used for Darwin
+      - "os/%{facts.os.family}/%{macosx_productversion_major}.yaml"
+        # Used for Solaris
+      - "os/%{facts.os.family}/%{facts.kernelrelease}.yaml"
+        # Used to distinguish between Debian and Ubuntu
+      - "os/%{facts.os.name}/%{facts.os.release.major}.yaml"
+  - name: "osfamily"
+    paths:
+      - "os/%{facts.os.family}.yaml"
+      - "os/%{facts.os.name}.yaml"
+
   - name: 'common'
     path: 'common.yaml'
